# Automated-Job-Scrapper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
backend/: __init__.py  main.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
